--- a/ZSZ.Admin.Web/Web.config
+++ b/ZSZ.Admin.Web/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
   <system.web>
     <!--数据库Session配置-->
-    <sessionState mode="SQLServer" allowCustomSqlDatabase="true" sqlConnectionString="server=.;database=ZSZ;uid=sa;pwd=123" />
+    <sessionState mode="SQLServer" allowCustomSqlDatabase="true" sqlConnectionString="server=.;database=HPZP;uid=sa;pwd=123" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
@@ -65,7 +65,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="connstr" connectionString="Data Source=.;Initial Catalog=ZSZ;User ID=sa;Password=123" providerName="System.Data.SqlClient" />
+    <add name="connstr" connectionString="Data Source=.;Initial Catalog=HPZP;User ID=sa;Password=123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
