--- a/ZSZ.Admin.Web/ZSZ.Admin.Web.csproj
+++ b/ZSZ.Admin.Web/ZSZ.Admin.Web.csproj
@@ -114,9 +114,11 @@
     <Content Include="css\H-ui.login.css" />
     <Content Include="css\H-ui.min.css" />
     <Content Include="css\H-ui.reset.css" />
+    <Content Include="css\layui.css" />
     <Content Include="css\style.css" />
     <Content Include="css\VlidForm.css" />
     <Content Include="Global.asax" />
+    <Content Include="HtmlPage1.html" />
     <Content Include="images\acrossTab-2.png" />
     <Content Include="images\acrossTab-2bak.png" />
     <Content Include="images\acrossTab-bg.png" />
@@ -146,10 +148,13 @@
     <Content Include="js\H-ui.admin.js" />
     <Content Include="js\H-ui.js" />
     <Content Include="js\jquery.min.js" />
+    <Content Include="js\laypage.js" />
+    <Content Include="js\layui.js" />
     <Content Include="lib\bootstrap-modal\2.2.4\bootstrap-modal.js" />
     <Content Include="lib\bootstrap-modal\2.2.4\bootstrap-modalmanager.js" />
     <Content Include="lib\bootstrap-Switch\bootstrapSwitch.css" />
     <Content Include="lib\bootstrap-Switch\bootstrapSwitch.js" />
+    <Content Include="lib\datatables\1.10.0\jquery.dataTables.min.css" />
     <Content Include="lib\datatables\1.10.0\jquery.dataTables.min.js" />
     <Content Include="lib\DD_belatedPNG_0.0.8a-min.js" />
     <Content Include="lib\dropzone\dropzone.css" />
@@ -1335,11 +1340,36 @@
     <Content Include="lib\zTree\v3\js\jquery.ztree.exhide-3.5.js" />
     <Content Include="lib\zTree\v3\js\jquery.ztree.exhide-3.5.min.js" />
     <Content Include="lib\zTree\v3\log v3.x.txt" />
+    <Content Include="skin\blue\acrossTab-bg.png" />
+    <Content Include="skin\blue\acrossTab.png" />
+    <Content Include="skin\blue\icon_arrow.png" />
+    <Content Include="skin\blue\skin.css" />
+    <Content Include="skin\default\acrossTab-bg.png" />
+    <Content Include="skin\default\acrossTab.png" />
+    <Content Include="skin\default\icon_arrow.png" />
+    <Content Include="skin\default\skin.css" />
+    <Content Include="skin\green\acrossTab-bg.png" />
+    <Content Include="skin\green\acrossTab.png" />
+    <Content Include="skin\green\icon_arrow.png" />
+    <Content Include="skin\green\skin.css" />
+    <Content Include="skin\orange\acrossTab-bg.png" />
+    <Content Include="skin\orange\acrossTab.png" />
+    <Content Include="skin\orange\icon_arrow.png" />
+    <Content Include="skin\orange\skin.css" />
+    <Content Include="skin\red\acrossTab-bg.png" />
+    <Content Include="skin\red\acrossTab.png" />
+    <Content Include="skin\red\icon_arrow.png" />
+    <Content Include="skin\red\skin.css" />
+    <Content Include="skin\yellow\acrossTab-bg.png" />
+    <Content Include="skin\yellow\acrossTab.png" />
+    <Content Include="skin\yellow\icon_arrow.png" />
+    <Content Include="skin\yellow\skin.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\ZSZExceptionFilter.cs" />
+    <Compile Include="Controllers\AdminUserController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PermissionOPController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
@@ -1354,6 +1384,7 @@
     <Compile Include="lib\ueditor\1.4.3\net\App_Code\NotSupportedHandler.cs" />
     <Compile Include="lib\ueditor\1.4.3\net\App_Code\PathFormater.cs" />
     <Compile Include="lib\ueditor\1.4.3\net\App_Code\UploadHandler.cs" />
+    <Compile Include="Models\AddAdminModel.cs" />
     <Compile Include="Models\EditPermission.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\PermissionAdd.cs" />
@@ -1450,6 +1481,16 @@
     <Content Include="Views\PermissionOP\Add.cshtml" />
     <Content Include="Views\PermissionOP\EditPermission.cshtml" />
     <Content Include="Views\Role\Index.cshtml" />
+    <Content Include="Views\Home\MainIndex.cshtml" />
+    <Content Include="skin\blue\Thumbs.db" />
+    <Content Include="skin\default\Thumbs.db" />
+    <Content Include="skin\green\Thumbs.db" />
+    <Content Include="skin\orange\Thumbs.db" />
+    <Content Include="skin\red\Thumbs.db" />
+    <Content Include="skin\yellow\Thumbs.db" />
+    <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\AdminUser\List.cshtml" />
+    <Content Include="Views\AdminUser\AddAdmin.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
