--- a/ZSZ.Common/ZSZ.Common.csproj
+++ b/ZSZ.Common/ZSZ.Common.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="AjaxResult.cs" />
     <Compile Include="CommonHelper.cs" />
+    <Compile Include="Pageing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrimToDBCModelBinder.cs" />
   </ItemGroup>
