--- a/ZSZ.Service/ZSZ.Service.csproj
+++ b/ZSZ.Service/ZSZ.Service.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminLoginService.cs" />
+    <Compile Include="AdminUserService.cs" />
     <Compile Include="BaseService.cs" />
     <Compile Include="CommonService.cs" />
     <Compile Include="Configs\AdminUserConfig.cs" />
@@ -82,6 +83,7 @@
     <Compile Include="Entities\SettingEntity.cs" />
     <Compile Include="Entities\TutorEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleService.cs" />
     <Compile Include="ZSZContext.cs" />
   </ItemGroup>
   <ItemGroup>
